css align fixed on nationalities field

--- a/client/src/app/data-editor/data-editor.component.css
+++ b/client/src/app/data-editor/data-editor.component.css
@@ -12,3 +12,7 @@ md-card-subtitle {
   vertical-align: middle;
   cursor: pointer;
 }
+
+md-icon {
+	font-size: 20px
+}
