--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -2,3 +2,7 @@
   font-family: Roboto, "Helvetica Neue", sans-serif;
   color: #E6142D;
 }
+
+.form_log .form_pwd {
+	color: #E6142D
+}
